# Amplitude-Phase-Distance

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOWS.md  MANIFEST.in  README.md  codecov.yml  commit_fixes.sh  dev-setup.py  example.ipynb  pyproject.toml  requirements-ci.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: basic-ci.yml  ci.yml  code-quality.yml  dependency-update.yml  docs.yml  performance.yml  release.yml  simple-test.yml
apdist/: __init__.py  _version.py  distances.py  geometry.py  optim.py  torch.py  utils.py
notebooks/: 01-saxs.ipynb  02-uvvis.ipynb
notebooks/data/01/: I_baseline.npy  I_sobol.npy  q_grid.npy  q_grid_scaled.npy  targetI.npy
notebooks/data/02/: uvvis.npz
testing/: README.md  TESTING_GUIDE.md  TEST_SUITE_SUMMARY.md  pytest.ini  requirements-test.txt  run_tests.py  test_basic_functionality.py
testing/tests/: README.md  __init__.py  conftest.py  test_basic.py  test_core_only.py  test_distances.py  test_geometry.py  test_integration.py  test_torch.py  test_utils.py
